# nunchucks

./: .nunchucks.toml  Cargo.toml  README.md
art/: design.md
src/: actions.rs  config.rs  error.rs  hotkeys.rs  main.rs  notification.rs
